# vibeCoding

./: .gitignore  CLAUDE.md  spec.md
.claude/: settings.json  settings.local.json
.claude/hooks/: auto-commit-todo.sh
backend/: CLAUDE.md  SETUP_COMPLETE.md  TODO.md  dev.bat  dev.sh  docker-compose.yml  pyproject.toml
backend/.claude/: settings.local.json
backend/.claude/commands/: next-task.md  phase0-setup.md  phase1-lib.md  phase2-auth.md  phase3-post.md  phase4-api.md  phase5-test.md  verify.md
backend/.claude/rules/: api-convention.md  auth-guard.md  sqlalchemy-pattern.md
backend/alembic/: env.py
backend/alembic/versions/: fcc18bd055b5_init.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  comments.py  likes.py  posts.py  search.py  series.py  tags.py  upload.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  comment.py  post.py  series.py  tag.py  user.py
backend/app/schemas/: auth.py  post.py  series.py  user.py
backend/app/utils/: response.py  slug.py  trending.py
backend/tests/: conftest.py
backend/tests/api/: test_comments.py  test_e2e.py  test_likes.py  test_posts.py  test_search.py  test_series.py  test_tags.py  test_upload.py  test_users.py
frontend/: CLAUDE.md  E2E_FEED_TESTS.md  PHASE5_QUICKSTART.md  PHASE5_README.md  TODO.md  next.config.ts  package.json  page-snapshot.md  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
frontend/.claude/: settings.local.json
frontend/app/: error.tsx  (+5 more)
(+209 files in other folders)
