[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecoding-backend"
version = "0.1.0"
description = "Velog-style Korean developer blog platform - Backend"
requires-python = ">=3.11"
authors = [{name = "vibeCoding Team"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    "cloudinary>=1.35.0",
    "python-slugify>=8.0.0",
    "email-validator>=2.1.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "pytest-cov>=4.1",
    "taskipy>=1.12.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload --port 8000"
test = "pytest"
check = "python -c \"from app.main import app; from app.db.base import Base; print('OK - App loaded')\""
